# tigris-tech-labs

./: .gitignore  index.html
.claude/: settings.json
Condo/condo-briefing/: FirstService-Residential-Briefing-2026.docx  TALKING_POINTS.md  package-lock.json  package.json
Condo/condo-briefing/.claude/: launch.json
Condo/condo-briefing/public/: aon-logo-source.eps
Condo/condo-briefing/scripts/: build_briefing_docx.py  process-evac-zones.py  process-hurdat2.py
Condo/condo-briefing/src/app/: globals.css  layout.tsx
Condo/condo-briefing/src/components/: Avatar.tsx  BuildingDetail.tsx  BuildingIllustration.tsx  CondoBlueprint.tsx  CondoRender.tsx  (+11 more)
Products/alevant-app/: BOOTSTRAP.md  CLAUDE.md  README.md  REFACTOR-ROADMAP.md  deploy.sh
Products/alevant-app/docs/: ALEVANT_Bichi_Kickoff.md  ALEVANT_Brand_Identity.html  ALEVANT_Build_Manifest.md  ALEVANT_Concept_Brief.md  ALEVANT_Grid_Hazard_Model_Spec.md  ALEVANT_Grid_Q3_Sprint.md  ALEVANT_How_It_Works.html  ALEVANT_Launch_Plan.md  ALEVANT_Multimodal_Signals_Spec.md  ALEVANT_Onboarding_Spec.md  ALEVANT_Technical_Architecture.md  TIGRIS_Modeling_Platform_Spec.md
Products/alevant-app/ml/: .gitignore  README.md  pyproject.toml
Products/alevant-app/ml/hazard_model/: __init__.py  calibration.py  data_loader.py  fairness_audit.py  feature_engineering.py  predict.py  synthetic_data.py  train.py
Products/alevant-app/ml/tests/: test_pipeline.py
Products/alevant-app/mobile/: README.md
Products/alevant-app/web/: .env.example  .gitignore  README.md  next.config.ts  package-lock.json  package.json  vercel.json
(+318 files in other folders)
