[project]
name = "alevant-hazard"
version = "0.1.0"
description = "ALEVANT Grid v2 hazard model — time-to-listing probabilities for residential real estate"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "scikit-learn>=1.5",
  "statsmodels>=0.14",
  "lightgbm>=4.5",
  "lifelines>=0.30",
  "fairlearn>=0.11",
  "shap>=0.46",
  "supabase>=2.7",
  "python-dotenv>=1.0",
  "joblib>=1.4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py311"
